# LOG-mcp

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.sh
.github/: FUNDING.yml
.github/workflows/: deploy.yml  test.yml
.research/: READINESS-AUDIT.md
.research/dataset-quality/: JOURNEY.md
.research/model-discovery/: JOURNEY.md
.research/prompt-engineering/: JOURNEY.md
.research/provider-abstraction/: JOURNEY.md
cloudflare/: README.md
cloudflare/pages/: index.html
cloudflare/worker/: index.js  package.json  (+2 more)
docker/: .env.example  Dockerfile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  JETSON-INFERENCE.md  LLAMACPP-INTEGRATION.md  ML-TRAINING.md  PERFORMANCE-AUDIT.md  PHASE2-PLAN.md  PHASE2-REASONER.md  PLAN.md  PROMPT-CACHING.md  README.md  REVIEW.md  ROADMAP-v2.md  ROADMAP-v3.md  ROADMAP-v4.md  SUPERINSTANCE-ANALYSIS.md  VISION.md
gateway/: README.md  auth.py  deps.py  error_boundary.py  observability.py  prompt_pipeline.py  rate_limit.py  routes.py  routes.py.bak  server.py  shared.py  startup.py  tracing.py
mcp/: README.md  server.py
scouts/: README.md  __init__.py  base.py  claude.py  deepseek_scout.py
scripts/: README.md  test_local_inference.py  vault-init.sh
tests/: README.md  conftest.py  demo_e2e.py  test_adaptive_routing.py  test_benchmark.py  test_cli_db.py  test_core.py  test_dataset_manager.py  test_dataset_quality.py  test_drafts.py  test_error_boundary.py  test_extended.py  test_gateway.py  test_gpu_utils.py  test_important_fixes.py  test_llm_scorer.py  test_local_inference.py  test_migrations.py  test_model_discovery.py  test_model_lifecycle.py  test_model_subprocess.py  test_phase2.py  test_production.py  test_profiles.py  test_prompt_intelligence.py  test_prompt_pipeline.py  test_provider_wiring.py  test_providers.py  test_routing_optimizer.py  test_routing_script.py  test_semantic_cache.py  test_sessions.py  test_stats_engine.py  test_training_pipeline.py
vault/: Dockerfile  README.md  adaptive_routing.py  archiver.py  benchmark.py  cli.py  config.py  core.py  dataset_manager.py  dataset_quality.py  dataset_stats.py  docker-compose.yml  draft_profiles.py  gpu_utils.py  llm_scorer.py  local_inference.py  migrations.py  model_client.py  model_comparator.py  model_discovery.py  model_lifecycle.py  model_manager.py  model_subprocess.py  profiles.py  prompt_intelligence.py  reallog_db.py  routing_optimizer.py  routing_script.py  routing_updater.py  semantic_cache.py  stats_collector.py  training_pipeline.py  unified_store.py
web/: README.md  index.html
(+2 files in other folders)
