[project]
name = "log-vault"
version = "0.1.0"
description = "L.O.G. — Latent Orchestration Gateway Vault (Local Privacy Engine)"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "sqlite-utils>=3.35.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "anthropic>=0.18.0",
    "openai>=1.6.0",
    "python-dotenv>=1.0.0",
    "regex>=2023.10.0",
]

[project.scripts]
log = "vault.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
